--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -84,9 +84,9 @@ Downloading the USACountyIncomeEmploy data
 
 ```{r}
 #download/clean USACountyIncomeEmploy data
-download.file("https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Unemployment.xls?v=42762", destfile = "C:\\Users\\Katrlyn\\Downloads\\income.xls", mode = "wb" )
+download.file("https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Unemployment.xls?v=42762", destfile = "/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/income.xls", mode = "wb" )
 
-income_unclean <- read_excel("C:\\Users\\Katrlyn\\Downloads\\income.xls", sheet = 1, skip = 7)
+income_unclean <- read_excel("/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/income.xls", sheet = 1, skip = 7)
 head(data)
 income<- income_unclean %>% mutate(Area_name= gsub(", ..$", "", Area_name), Area_name)%>%subset(select=c("FIPStxt","Median_Household_Income_2015","Unemployment_rate_2015"))%>%dplyr::rename(FIPSCode=FIPStxt)
 
@@ -294,7 +294,7 @@ library(readxl)
 
 fileLocations <- vector(mode="character", length=length(AllStates$stateNames))
 for(i in 1:length(AllStates$stateNames)){
-  destination <- paste("C:\\Users\\kagex\\stats133Project\\AllStates\\", AllStates$stateNames[i], ".xls", sep = "")
+  destination <- paste("/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/AllStates", AllStates$stateNames[i], ".xls", sep = "")
   #file must be handled locally during preprocessing.
   download.file(AllStates$downloadLinks[i], destfile = destination, mode = "wb" )
   
@@ -308,7 +308,7 @@ View(AllStates)
 
 Load the filepaths if you're using the downloaded files
 ```{r}
-AllStates$fileLocations <- paste("C:\\Users\\kagex\\stats133Project\\AllStates\\", AllStates$stateNames, ".xls", sep = "")
+AllStates$fileLocations <- paste("/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/AllStates", AllStates$stateNames, ".xls", sep = "")
 AllStates
 ```
 
@@ -363,6 +363,8 @@ all_data<-every_county%>%left_join(edu_data, by ='FIPSCode')
 all_data<-all_data%>%full_join(income, by='FIPSCode')
 all_data<-all_data%>%full_join(poll_county, by= 'FIPSCode')
 all_data<-all_data%>%full_join(tree_data, by='FIPSCode')
+library(xlsx)
+write.xlsx(all_data, "/Users/anishakumar/Documents/Stats 133/RStudio Files/Stats133Project/all_data.xlsx")
 View(all_data)
 ```
 
